--- a/src/Consumer.Service/Consumer.Service.csproj
+++ b/src/Consumer.Service/Consumer.Service.csproj
@@ -6,6 +6,8 @@
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 	<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 	<PackageReference Include="RabbitMQ.Client" Version="6.*" />
+	<ProjectReference Include="..\Application.Contracts.Events\Application.Contracts.Events.csproj" />
+	<ProjectReference Include="..\Application.Services\Application.Services.csproj" />
     <ProjectReference Include="..\Gateway.Data.File\Gateway.Data.File.csproj" />
     <ProjectReference Include="..\Gateway.Messaging.RabbitMQ\Gateway.Messaging.RabbitMQ.csproj" />
     <ProjectReference Include="..\Infrastructure.CrossCutting\Infrastructure.CrossCutting.csproj" />
