--- a/src/Infrastructure.CrossCutting/Infrastructure.CrossCutting.csproj
+++ b/src/Infrastructure.CrossCutting/Infrastructure.CrossCutting.csproj
@@ -1,1 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <ProjectReference Include="..\Application.Contracts.Events\Application.Contracts.Events.csproj" />
+  </ItemGroup>
+</Project>
