--- a/src/Gateway.Messaging.RabbitMQ/Gateway.Messaging.RabbitMQ.csproj
+++ b/src/Gateway.Messaging.RabbitMQ/Gateway.Messaging.RabbitMQ.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
 	<PackageReference Include="RabbitMQ.Client" Version="6.*" />
+	<ProjectReference Include="..\Application.Contracts.Events\Application.Contracts.Events.csproj" />
     <ProjectReference Include="..\Infrastructure.CrossCutting\Infrastructure.CrossCutting.csproj" />
   </ItemGroup>
 </Project>
